--- a/style.css
+++ b/style.css
@@ -8,3 +8,20 @@ h1 {
     max-width: fit-content;
     margin: 3rem auto;
 }
+
+#drawing-area {
+    margin: auto;
+    height: 480px;
+    width: 480px;
+    background-color: black;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1.5px;
+}
+
+#drawing-area div {
+    width: 100%;
+    height: 100%;
+    background-color: #acc8c8;
+}
