--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@ h1 {
     width: 480px;
     background-color: #462d8b;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template: repeat(2, 1fr);
     gap: 3px;
 }
 
