--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 :root {
+    font-family: monospace;
     background-color: gray;
     color: peachpuff;
 }
 
 h1 {
-    font-family: monospace;
     max-width: fit-content;
     margin: 3rem auto;
+    margin-bottom: 1.5rem;
+    font-size: 5rem;
 }
 
 #control-bar {
@@ -15,10 +17,14 @@ h1 {
     max-width: fit-content;
 }
 
+#control-bar * {
+    font-size: 1.8rem;
+}
+
 #drawing-area {
     margin: auto;
-    height: 480px;
-    width: 480px;
+    height: 720px;
+    width: 720px;
     background-color: #462d8b;
     display: grid;
     grid-template: repeat(2, 1fr);
